<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/main_activity_padding"
    >

    <android.support.v7.widget.RecyclerView
        android:id="@+id/friends_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:scrollbars="vertical"
        >

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/action_buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/add_user_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <Button
            android:id="@+id/send_user_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send"/>

    </LinearLayout>

</RelativeLayout>
